test/invalid/redeclare_final.qt
function main() -> int {
    final int value = 42;
    value = 10;  
    return value;
}